Fixes scrollbars showing

--- a/theme/list.less
+++ b/theme/list.less
@@ -3,5 +3,6 @@
 .list {
 
     width: 100%;
+    overflow-x: none;
     overflow-y: scroll;
 }
